<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveTube</string>
    <string name="tab_library">Library</string>
    <string name="tab_player">Player</string>
    <string name="library_refresh">Refresh all</string>
    <string name="add_library_item">Add channel or playlist</string>
    <string name="paste_link_hint">Paste a YouTube link</string>
    <string name="play">Play</string>
    <string name="download_video">Download</string>
    <string name="audio_only">Audio only (saves data &amp; battery)</string>
    <string name="auto_next">Auto-play next video (playlists &amp; channels)</string>
    <string name="empty_library">No channels or playlists yet.\nTap + to add one.</string>
    <string name="channel">Channel</string>
    <string name="playlist">Playlist</string>
    <string name="live">LIVE</string>
    <string name="load_all">Load all</string>
    <string name="load_all_confirm_title">Load all videos?</string>
    <string name="load_all_confirm_message">This fetches every page of this feed. Large channels can take a while and many requests. Continue?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="refreshing">Refreshing…</string>
    <string name="loading">Loading…</string>
    <string name="preparing">Preparing playback…</string>
    <string name="preparing_download">Preparing download…</string>
    <string name="download_started">“%1$s” added to Downloads</string>
    <string name="download_failed">Couldn\'t start the download.</string>
    <string name="download_no_video">Paste or play a video first.</string>
    <string name="download_youtube_only">Downloads currently support YouTube videos.</string>
    <string name="download_permission_required">Storage permission is needed on Android 8 or 9 to save to Downloads.</string>
    <string name="added">Added to library</string>
    <string name="invalid_link">That link isn\'t a valid channel or playlist URL.</string>
    <string name="stop">Stop</string>
</resources>